# iceberg-lakehouse-modernization

./: Makefile  README.md  dlt.yml  dlt_warehouse.yml  pyproject.toml
demo/: access.ipynb
dlt_portable_data_lake_demo/pipelines/: run_lakekeeper.py
dlt_portable_data_lake_demo/sources/: github.py
dlt_portable_data_lake_demo/transformations/dbt_aggregate_issues/: dbt_project.yml
dlt_portable_data_lake_demo/transformations/dbt_aggregate_issues/models/: sources.yml
tests/: conftest.py  test_demo.py
